feat:ban exhibition & fixbug: update exhibition
