# cmd/exhibition/doc/swagger.yaml
@@ -527,6 +527,32 @@ paths:
       summary: Update exhibition by ID
       tags:
       - Exhibitions
+  /api/exhibitions/{id}/ban:
+    post:
+      description: BanExhibition by exhibitionID
+      operationId: BanExhibition
+      parameters:
+      - description: Exhibition ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.ResponseExhibition'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/helper.APIError'
+      security:
+      - BearerAuth: []
+      summary: BanExhibition
+      tags:
+      - Ban
   /api/exhibitions/{id}/like:
     put:
       description: Like exhibition by exhibitionID
